--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,9 @@ body {
   padding: 1.5em;
   font-family: "Red Hat Display", sans-serif;
   font-size: 16px;
-  background-color: var(--pale-blue);
+  background-color: hsl(225, 100%, 94%);
+  background-image: url("../img/pattern-background-mobile.svg");
+  background-size: cover;
 }
 
 .card {
@@ -131,6 +133,9 @@ body {
 }
 
 @media (min-width: 992px) {
+  body {
+    background-image: url("../img/pattern-background-desktop.svg");
+  }
   .card {
     max-width: 400px;
   }
