--- a/css/main.css
+++ b/css/main.css
@@ -51,9 +51,8 @@ table {
 
 body {
   display: grid;
-  place-content: center;
+  place-items: center;
   min-height: 100vh;
-  padding: 1.5em;
   font-family: "Red Hat Display", sans-serif;
   font-size: 16px;
   background-color: hsl(225, 100%, 94%);
@@ -62,7 +61,8 @@ body {
 }
 
 .card {
-  max-width: 325px;
+  width: 90%;
+  max-width: 40rem;
   border-radius: 1em;
   background-color: var(--white);
   box-shadow: 0 0 0.5em hsl(210, 2%, 78%);
